fixed blurry image issue! The random height feature is still funky

--- a/Frontend/platforms/ios/www/css/style.css
+++ b/Frontend/platforms/ios/www/css/style.css
@@ -355,7 +355,7 @@ a {
 /* FEED.HTML */
 
 .feed_background {
-    background-color: #f7fafc;
+    background-color: #eee;
 }
 
 .feed_viewTitle {
@@ -462,6 +462,52 @@ a {
     font-weight: bold;
 }
 
+.feed_test {
+    display: table;
+    border-radius: 5px;
+    width: 96%;
+    background-color: #f7fafc;
+    margin-top: 10px;
+}
+
+.feed_test img {
+    //height: 80%;
+    width: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.feed_contentItem {
+    width: 100%;
+    height: 25px;
+}
+
+.feed_listItem {
+    display: inline-block;
+    float: left;
+    margin-top: 5px;
+    margin-left: 5px;
+    font-size: 9px;
+    max-width: 80px;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.feed_price {
+    display: inline-block;
+    float: right;
+    margin-top: 5px;
+    margin-right: 5px;
+    font-size: 11px;
+    font-family: 'Work Sans', sans-serif;
+    color: #00557C;
+    font-weight: 800;
+}
+
 /* ACCOUNT.HTML */
 
 .account_background {
@@ -561,5 +607,16 @@ and (orientation : portrait) {
 
     #account_contact {
         margin-top: 25px;
+    }
+
+    .feed_price {
+        display: inline-block;
+        float: right;
+        margin-top: 5px;
+        margin-right: 5px;
+        font-size: 9px;
+        font-family: 'Work Sans', sans-serif;
+        color: #00557C;
+        font-weight: 800;
     }
 }
